src/snapshots/squawk__rules__test_rules__adding_check_constraint.snap
---
source: src/rules.rs
expression: "check_sql(&bad_sql, &[])"
---
Ok(
    [
        RuleViolation {
            kind: ConstraintMissingNotValid,
            span: Span {
                start: 0,
                len: Some(
                    94,
                ),
            },
            messages: [
                Note(
                    "Requires a table scan to verify constraint and an ACCESS EXCLUSIVE lock which blocks reads.",
                ),
                Help(
                    "Add NOT VALID to the constraint and then VALIDATE the constraint.",
                ),
            ],
        },
    ],
)
