src/snapshots/squawk__rules__test_rules__adding_field_that_is_not_nullable-2.snap
---
source: src/rules.rs
expression: "check_sql(&bad_sql, &[])"
---
Ok(
    [
        RuleViolation {
            kind: AddingNotNullableField,
            span: Span {
                start: 0,
                len: Some(
                    124,
                ),
            },
            messages: [
                Note(
                    "Adding a NOT NULL field requires exclusive locks and table rewrites.",
                ),
                Help(
                    "Make the field nullable.",
                ),
            ],
        },
    ],
)
