src/snapshots/squawk__rules__test_rules__adding_index_non_concurrently.snap
---
source: src/rules.rs
expression: "check_sql(bad_sql, &[])"
---
Ok(
    [
        RuleViolation {
            kind: RequireConcurrentIndexCreation,
            span: Span {
                start: 0,
                len: Some(
                    79,
                ),
            },
            messages: [
                Note(
                    "Creating an index blocks writes.",
                ),
                Help(
                    "Create the index CONCURRENTLY.",
                ),
            ],
        },
    ],
)
