src/snapshots/squawk__rules__test_rules__ban_drop_database.snap
---
source: src/rules.rs
expression: "check_sql(&sql, &[])"
---
Ok(
    [
        RuleViolation {
            kind: BanDropDatabase,
            span: Span {
                start: 0,
                len: Some(
                    27,
                ),
            },
            messages: [
                Note(
                    "Dropping a database may break existing clients.",
                ),
            ],
        },
        RuleViolation {
            kind: BanDropDatabase,
            span: Span {
                start: 28,
                len: Some(
                    37,
                ),
            },
            messages: [
                Note(
                    "Dropping a database may break existing clients.",
                ),
            ],
        },
        RuleViolation {
            kind: BanDropDatabase,
            span: Span {
                start: 66,
                len: None,
            },
            messages: [
                Note(
                    "Dropping a database may break existing clients.",
                ),
            ],
        },
    ],
)
