src/snapshots/squawk__rules__test_rules__renaming_column.snap
---
source: src/rules.rs
expression: "check_sql(&sql, &[])"
---
Ok(
    [
        RuleViolation {
            kind: RenamingColumn,
            span: Span {
                start: 0,
                len: Some(
                    74,
                ),
            },
            messages: [
                Note(
                    "Renaming a column may break existing clients.",
                ),
            ],
        },
    ],
)
